--- a/src/Components/TicTacToe/TicTacToe.css
+++ b/src/Components/TicTacToe/TicTacToe.css
@@ -38,3 +38,11 @@
     display: flex;
     margin: auto;
 }
+.boxes img{
+    margin: 50px 50px;
+}
+
+.title img{
+  padding: 20px 20px;
+  height: 50px;
+}
