--- a/src/Components/TicTacToe/TicTacToe.css
+++ b/src/Components/TicTacToe/TicTacToe.css
@@ -32,6 +32,9 @@
     border-radius: 12px;
     cursor: pointer;
 }
+.winning-box {
+    background: #ff6b6b !important;
+}
 .board{
     height: 600px;
     width: 564px;
